k8s/auth.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels: # telling the deployment that we want
      # to define all the different pods with a label app: posts
      app: auth
  template: # exact conf of a pod that we want this deployment to create
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: raghavajag/auth
          imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  type: ClusterIP
  selector: # tells the service which pods it route traffic to
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000 # this can be any arbitary value. the port which service listens on
      targetPort: 3000 # it has to match the port at which our application inside the container is listening
